Issue fixed : Extra space and auto scroll issue in Save As light box (FF and Chrome)

--- a/WebContent/styles/style.css
+++ b/WebContent/styles/style.css
@@ -108,7 +108,7 @@ label{font-family:Helvetica; font-size:14px; font-weight:normal; color: #4D4D4D;
 #ex4::-webkit-scrollbar-thumb:hover { background-color:#b0b0b0;border:1px solid #888889; }
 #ex4::-webkit-scrollbar-thumb:active { background-color:#b0b0b0;border:1px solid #888889; }
 #scroll { width: 100%; height: 250px; border-radius:2px; overflow: auto; overflow-y: scroll;box-shadow: 0 0 3px #ccc;}  
-#scroll ul { display: table; white-space: nowrap; list-style: none; padding:0;border-right:1px solid #ccc;}   
+#scroll ul { display: table; white-space: nowrap; list-style: none; padding:0;border-right:1px solid #ccc;min-height: 248px; margin:0px;}   
 #scroll li { display: table-cell; text-align: center; width:220px; }
 #scroll .folder-template-container li {display: table; text-align: center; width:220px; text-align: left;}
 #scroll li a { margin: 15px 15px 0 15px;}   
@@ -146,7 +146,7 @@ label{font-family:Helvetica; font-size:14px; font-weight:normal; color: #4D4D4D;
         position: absolute;
         width: 220px;
         left: 220px;
-        top: 0;
+        top: 0;        
     }
 .new-folder-modal-footer{
     margin:0;
